--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     
 
    <div class="container text-center">
-    <img src="/image/photo1687418042.jpeg" class="mobile border border-white rounded-4 border-3" alt="">
-    <img src="/image/icon.jpg" class="img rounded-4" alt="">
-    <img src="/image/photo1687418042 (1).jpeg" class="mobile-two border border-white rounded-4 border-3"  alt="">
+    <img src="https://sithulin12.github.io/sing/image/photo1687418042.jpeg" class="mobile border border-white rounded-4 border-3" alt="">
+    <img src="https://sithulin12.github.io/sing/image/icon.jpg" class="img rounded-4" alt="">
+    <img src="https://sithulin12.github.io/sing/image/photo1687418042 (1).jpeg" class="mobile-two border border-white rounded-4 border-3"  alt="">
 
 
     <a href="">
-        <img src="/image/button.png" class="btn" alt="">
+        <img src="https://sithulin12.github.io/sing/image/button.png" class="btn" alt="">
     </a>
    </div>
 </body>
